--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
     <link
       rel="shortcut icon"
-      href="../../public/images/icon.png"
+      href="/images/icon.png"
       type="image/x-icon"
     />
   </head>
@@ -23,9 +23,9 @@
 
     <div class="toggle-btn" id="toggleBtn">
       <span class="switch"></span>
-      <img src="../../public/images/moon.png" class="moon" />
+      <img src="/images/moon.png" class="moon" />
     </div>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
