--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="toggle-btn" id="toggleBtn">
       <span class="switch"></span>
-      <img src="/images/moon.png" class="moon" />
+      <img src="/images/icon.png" class="moon" />
     </div>
 
     <script src="script.js"></script>
