--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 
   <body data-theme="light">
     <div class="content">
-      <h1>Welcome to My Website</h1>
+      <h1>
+        This website is still under construction.
+      </h1>
       <p>
-        This is some example text. You can replace it with your own content.
+        Come back later.
       </p>
     </div>
 
