--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     />
   </head>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-6X3S26T1S3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-6X3S26T1S3');
+  </script>
+
   <body data-theme="light">
     <div class="content">
       <h1>
