--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       rel="shortcut icon"
       href="/images/icon.png"
       type="image/x-icon"
+      alt="lumirae logo image"
+      title="lumirae"
     />
   </head>
 
