--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div class="toggle-btn" id="toggleBtn">
       <span class="switch"></span>
-      <img src="/images/icon.png" class="moon" />
+      <img src="/images/icon.png" class="moon" alt="moon/sun image" />
     </div>
 
     <script src="script.js"></script>
