--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       <input />
     </div>
 
-    <div class="toggle-btn" id="toggleBtn">
+    <div class="toggle-btn" id="toggleBtn" title="Sun/Moon background">
       <span class="switch"></span>
-      <img src="/images/icon.png" class="moon" alt="moon/sun image" />
+      <img src="/images/icon.png" class="moon" alt="moon image" />
     </div>
 
     <script src="script.js"></script>
