--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Written by aellora, this is a test website">
+ <meta http-equiv="content-language" content="en">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="website, test, aellora, lumirae, rae, lumi, ael, lora">
+  <meta name="author" content="aellora">
+  <meta name="publisher" content="aellora">
+  <meta name="copyright" content="aellora">
+  <meta name="description" content="This is a test website, used for testing purposes">
+  <meta name="page-topic" content="Media">
+  <meta name="page-type" content="Testing">
+  <meta name="audience" content="Everyone">
+  <meta name="robots" content="index, follow">
     <title>lumirae</title>
     <link rel="stylesheet" href="style.css" />
     <link
@@ -34,7 +42,6 @@
       <p>
         Come back later.
       </p>
-      <input />
     </div>
 
     <div class="toggle-btn" id="toggleBtn" title="Sun/Moon background">
