--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <meta name="author" content="aellora">
   <meta name="publisher" content="aellora">
   <meta name="copyright" content="aellora">
-  <meta name="description" content="This is a test website, used for testing purposes">
+  <meta name="description" content="This is a test website, used for testing purposes, in this website I test various javascripts, css and html specialties, so that I can have a live demo via github easy to have css examples.">
   <meta name="page-topic" content="Media">
   <meta name="page-type" content="Testing">
   <meta name="audience" content="Everyone">
   <meta name="robots" content="index, follow">
-    <title>lumirae</title>
+    <title>lumirae website for testing purposes</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="shortcut icon"
@@ -41,6 +41,13 @@
       </h1>
       <p>
         Come back later.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum suscipit viverra leo, ac feugiat metus accumsan sed. Quisque ut pretium orci. Aliquam venenatis sem vitae convallis mollis. Aliquam id maximus tellus. Pellentesque nisl arcu, laoreet quis enim in, scelerisque malesuada massa. Donec ultrices magna et tellus fringilla placerat. Duis sollicitudin nunc libero, at gravida lacus mattis vel. Mauris pulvinar ornare sem, id tincidunt magna semper et.
+        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras erat eros, tincidunt in porta in, rutrum ac libero. Sed lacus dui, tristique eget tempor eu, semper non lacus. Duis mattis mattis tellus, eu egestas enim bibendum sed. Nullam finibus maximus orci a egestas. Praesent molestie fermentum lectus. Praesent ac turpis vitae ligula malesuada efficitur eget eget libero. Suspendisse urna orci, tempor vitae metus eu, malesuada fermentum purus. Nam egestas posuere bibendum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vestibulum ullamcorper, leo eget aliquam vulputate, magna ex efficitur tortor, nec aliquet metus odio id lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas rutrum ac justo eget auctor. Mauris sit amet placerat velit, eget efficitur leo.
+        Vivamus laoreet purus at eros ornare mollis. Sed eget imperdiet sem. Pellentesque gravida elit tristique laoreet bibendum. Mauris auctor bibendum laoreet. Sed eu nibh vestibulum dui tristique pellentesque at id diam. Fusce non odio tortor. Etiam malesuada aliquam eros, eu volutpat neque blandit convallis. Duis rhoncus ultrices lectus, efficitur ultricies leo ornare vestibulum. Morbi dapibus erat porta massa ultrices cursus. Sed in pulvinar tellus, quis aliquet est. Nullam non elit eu lectus tincidunt porttitor.
+        Suspendisse laoreet mollis sapien, vitae pharetra sem mattis at. Aenean dictum tempus sem non dictum. Nullam condimentum urna et vulputate sodales. Nam eu dui et lacus scelerisque sagittis. Aliquam a lacus quis tortor elementum luctus ut vitae lorem. Nam vehicula pulvinar elit sit amet feugiat. Duis mi justo, dapibus eu ipsum at, euismod dictum sapien.
+        Vivamus nec risus eu nulla hendrerit gravida at sed diam. Duis eu mi cursus, consequat mauris in, egestas ex. Mauris quis feugiat odio. Etiam mattis nisi at augue tincidunt volutpat vel eu tellus. Sed eu facilisis mauris. Morbi finibus ex feugiat, pharetra dolor vitae, egestas nisl. Pellentesque vel purus luctus, varius odio in, cursus urna. Ut at purus condimentum, egestas tellus sed, dictum massa. Maecenas leo tellus, porta ut nulla nec, ultrices tempus est. Phasellus suscipit mattis est in imperdiet. 
       </p>
     </div>
 
