--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <meta name="page-type" content="Testing">
   <meta name="audience" content="Everyone">
   <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://lumirae.github.io/" />
     <title>lumirae website for testing purposes</title>
     <link rel="stylesheet" href="style.css" />
     <link
