--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <meta name="page-type" content="Testing">
   <meta name="audience" content="Everyone">
   <meta name="robots" content="index, follow">
+  <meta http-equiv="refresh" content="0;url=https://lumirae.github.io/">
     <link rel="canonical" href="https://lumirae.github.io/" />
     <title>lumirae website for testing purposes</title>
     <link rel="stylesheet" href="style.css" />
@@ -58,5 +59,11 @@
     </div>
 
     <script src="script.js"></script>
+    <script>
+      if (location.hostname !== 'https://lumirae.github.io/') {
+          location.replace('https://lumirae.github.io/' + location.pathname);
+      }
+    </script>
+
   </body>
 </html>
