--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <script src="script.js"></script>
     <script>
       if (location.hostname !== 'https://lumirae.github.io/') {
-          location.replace('https://lumirae.github.io/' + location.pathname);
+          location.replace('https://lumirae.github.io/');
       }
     </script>
 
