--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
     <script src="script.js"></script>
     <script>
-      if (location.hostname !== 'https://lumirae.github.io/') {
-          location.replace('https://lumirae.github.io/');
+      if (location.hostname !== 'https://lumirae.github.io') {
+          location.replace('https://lumirae.github.io');
       }
     </script>
 
