--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="page-type" content="Testing">
   <meta name="audience" content="Everyone">
   <meta name="robots" content="index, follow">
-  <meta http-equiv="refresh" content="0;url=https://lumirae.github.io/">
+  <meta http-equiv="refresh" content="0;url=https://lumirae.github.io">
     <link rel="canonical" href="https://lumirae.github.io/" />
     <title>lumirae website for testing purposes</title>
     <link rel="stylesheet" href="style.css" />
