--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
       alt="lumirae logo image"
       title="lumirae"
     />
+    <script>
+      // Check if the current URL ends with "index.html"
+      if (window.location.pathname.endsWith("/index.html")) {
+        // Redirect to the root URL
+        window.location.href = "/";
+      }
+    </script>
   </head>
 
 <!-- Google tag (gtag.js) -->
