--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <meta name="audience" content="Everyone">
     <meta name="robots" content="index, follow">
     <title>lumirae website for testing purposes</title>
+    <link rel="canonical" href="https://lumirae.github.io" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="shortcut icon"
