--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <div class="toggle-btn" id="toggleBtn" title="Sun/Moon background">
       <span class="switch"></span>
-      <img src="/images/icon.png" class="moon" alt="moon image" />
+      <img src="/images/icon.png" class="moon" alt="moon image" title="moon image" />
     </div>
 
     <script src="script.js"></script>
